# ecommerce-recommender-mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  data.dvc  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci-cd.yml
data/features/: .gitignore
data/processed/: .gitignore
docs/: model_card.md
scripts/: validate_env.py
src/: feature_eng.py  feature_eng.py.dvc  models.py  preprocess.py  registry.py  settings.py  train.py  utils.py
tests/: test_metrics.py  test_models.py  test_registry.py
