[project]
name = "ecommerce-recommender-mlops-daniel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.67.1",
    "mlflow>=3.12.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.14.1",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
